--- a/src/index.scss
+++ b/src/index.scss
@@ -261,4 +261,170 @@ main {
       }
     }
   }
+  .timeline-section {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 1rem;
+    background-color: #f4f4f4;
+    .timeline-title {
+      color: #404b57;
+      font-weight: bold;
+    }
+    .timeline {
+      position: relative; //給圓點對位置
+      border-left: 2px solid #ccc;
+      padding-left: 1rem;
+      margin: 1rem 0;
+
+      .timeline-item {
+        position: relative;
+        margin-bottom: 1rem;
+
+        .timeline-dot {
+          position: absolute;
+          top: 0;
+          left: -22px;
+          transform: translateY(0);
+          width: 10px;
+          height: 10px;
+          background: linear-gradient(135deg, #6a8190, #90a4ae);
+          border-radius: 50%;
+          border: 2px solid white;
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        }
+        .timeline-content {
+          h3 {
+            font-size: 1rem;
+          }
+          p {
+            padding: 0.3rem 0;
+          }
+        }
+      }
+    }
+  }
+  .project {
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    background-color: white;
+    .project_left,
+    .project_right {
+      flex: 1; //  左右兩邊平分空間
+    }
+    .project_left {
+      padding-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      justify-content: center;
+      gap: 10px;
+      padding-left: 1rem;
+      h2 {
+        color: #404b57;
+      }
+      .project-navigation {
+        //margin-left: auto;
+        display: flex;
+        gap: 1rem;
+        justify-content: center;
+
+        .nav-button {
+          width: 32px;
+          height: 32px;
+          border: 2px solid #2c3e50;
+          background: transparent;
+          border-radius: 50%; // 圓形
+          font-size: 1.5rem;
+          font-weight: bold;
+          color: #2c3e50;
+          cursor: pointer;
+          transition: all 0.3s ease;
+
+          &:hover {
+            background: #093b67;
+            color: white;
+            transform: scale(1.1);
+            box-shadow: 0 4px 8px rgba(0, 179, 164, 0.4);
+          }
+
+          &:active {
+            transform: scale(0.95);
+          }
+        }
+      }
+    }
+    .project_right {
+      flex: 2;
+      display: flex;
+      align-items: center;
+      gap: 1rem; // 上下間距
+      .project-button {
+        padding: 0.5rem 1.5rem;
+        background-color: #2c3e50;
+        color: white;
+        border: none;
+        border-radius: 999px;
+        font-size: 1rem;
+        font-weight: bold;
+        cursor: pointer;
+        transition: all 0.3s ease;
+
+        a {
+          color: inherit;
+          text-decoration: none;
+        }
+
+        &:hover {
+          background-color: #34495e;
+          transform: scale(1.05);
+        }
+      }
+
+      img {
+        width: 50%;
+
+        height: auto;
+        border-radius: 10px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+      }
+    }
+  }
+}
+footer {
+  padding: 3rem 1rem;
+  background-color: #f8f8f8;
+  text-align: center;
+  color: #333;
+
+  h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  .contact-info {
+    margin: 1.5rem 0;
+
+    p {
+      margin: 0.5rem 0;
+
+      a {
+        color: #3498db;
+        text-decoration: none;
+        transition: color 0.3s;
+
+        &:hover {
+          color: #1d6fa5;
+        }
+      }
+    }
+  }
+
+  .thanks {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    color: #666;
+  }
 }
